--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
   </head>
   <body>
-    <div class="header">
+    <div class="header" id="header">
       <div class="container">
         <a href="#" class="logo">Ezaat</a>
         <div class="main-nav">
@@ -33,7 +33,7 @@
         </div>
       </div>
     </div>
-    <div class="landing">
+    <div class="landing" id="landing">
       <div class="container">
         <div class="text">
           <h3>Welcome, To Elzero World</h3>
@@ -51,7 +51,7 @@
       </a>
     </div>
 
-    <div class="articles">
+    <div class="articles" id="landing">
       <h3 class="main-title">Articles</h3>
       <div class="container">
         <div class="box">
@@ -169,7 +169,7 @@
       </div>
     </div>
 
-    <div class="gallary">
+    <div class="gallary" id="landing">
       <h2 class="main-title">Gallery</h2>
       <div class="container">
         <div class="box">
@@ -205,7 +205,7 @@
       </div>
     </div>
 
-    <div class="features">
+    <div class="features" id="features">
       <h2 class="main-title">Features</h2>
       <div class="container">
         <div class="box quality">
@@ -244,7 +244,7 @@
       </div>
     </div>
 
-    <div class="testimonials">
+    <div class="testimonials" id="testimonials">
       <h2 class="main-title">testimonials</h2>
       <div class="container">
         <div class="box">
@@ -378,7 +378,7 @@
       </div>
     </div>
 
-    <div class="team">
+    <div class="team" id="team">
       <h2 class="main-title">team members</h2>
       <div class="container">
         <div class="box">
@@ -522,7 +522,7 @@
       </div>
     </div>
 
-    <div class="services">
+    <div class="services" id="services">
       <h2 class="main-title">services</h2>
       <div class="container">
         <div class="box">
@@ -591,7 +591,7 @@
       </div>
     </div>
 
-    <div class="our-skills">
+    <div class="our-skills" id="our-skills">
       <h2 class="main-title">our skills</h2>
       <div class="container">
         <div class="image">
@@ -626,7 +626,7 @@
       </div>
     </div>
 
-    <div class="work-steps">
+    <div class="work-steps" id="work-steps">
       <h2 class="main-title">how it works</h2>
       <div class="container">
         <div class="image">
@@ -667,7 +667,7 @@
       </div>
     </div>
 
-    <div class="events">
+    <div class="events" id="events">
       <div class="dots dots-up"></div>
       <div class="dots dots-down"></div>
       <h2 class="main-title">Latest events</h2>
@@ -710,7 +710,7 @@
       </div>
     </div>
 
-    <div class="plans">
+    <div class="plans" id="plans">
       <div class="dots dots-up"></div>
       <div class="dots dots-down"></div>
       <h2 class="main-title">Pricing plane</h2>
@@ -767,7 +767,7 @@
       </div>
     </div>
 
-    <div class="top-videos">
+    <div class="top-videos" id="top-videos">
       <h2 class="main-title">Top Videos</h2>
 
       <div class="container holder">
@@ -793,7 +793,7 @@
       </div>
     </div>
 
-    <div class="stats">
+    <div class="stats" id="stats">
       <h2>Our Awesome Stats</h2>
       <div class="container">
         <div class="box">
@@ -819,7 +819,7 @@
       </div>
     </div>
 
-    <div class="discount">
+    <div class="discount" id="discount">
       <div class="image">
         <div class="content">
           <h2>We Have A Discount</h2>
@@ -846,7 +846,7 @@
       </div>
     </div>
 
-    <div class="footer">
+    <div class="footer" id="footer">
       <div class="container">
         <div class="box">
           <div class="text">
